# UGFX_Win32FreeRTOS_Emulator

./: README.md  workspace.code-workspace
Components/FreeRTOS/: CMakeLists.txt
Components/FreeRTOS/Config/: FreeRTOSConfig.h
Components/UGFX/: CMakeLists.txt
Components/UGFX/Config/: gfxconf.h
Components/UGFX_GuiApp/: CMakeLists.txt
Components/UGFX_GuiApp/Inc/: UGFX_AppTimer.hpp  UGFX_GuiAppAnimationBase.hpp  UGFX_GuiAppBase.hpp  UGFX_PresenterBase.hpp  UGFX_ScreenBase.hpp  UGFX_ViewBase.hpp
Components/UGFX_GuiApp/Src/: UGFX_GuiAppBase.cpp
Core/Inc/: GUI_App.hpp  GuiApp.hpp  MainPresenter.hpp  MainScreen.hpp  Model.hpp  Screen2.hpp
Core/Src/: GUI_App.cpp  freertos_hooks.cpp  main.cpp
